# argumentative-path-rag

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  research_plan_v5_patch.md
docker/: docker-compose.yml
docs/: research_evaluation.md  research_plan_v5_patch2.md  research_plan_v6.md
eval_results/: cost_estimate_day5.md  day5_prompt_audit.md  day5_runbook.md  go_no_go_report_v1.md  qasper_main_v1.json  qasper_main_v2_gpt5mini.json
scripts/: demo.py  qasper_mini.py  quick_eval.py  synthesize_why_how.py  why_how_eval.py
src/ap_rag/: config.py  openai_compat.py  pipeline.py
src/ap_rag/evaluation/: ablation.py  baselines.py  evaluator.py  metrics.py
src/ap_rag/evaluation/benchmarks/: qasper.py
src/ap_rag/generation/: generator.py
src/ap_rag/graph/: neo4j_store.py  networkx_store.py  store.py
src/ap_rag/indexing/: chunker.py  classifier.py  cross_chunk.py  extractor.py  graph_cache.py  pipeline.py  schemas.py
src/ap_rag/models/: __init__.py  graph.py  taxonomy.py
src/ap_rag/retrieval/: context_builder.py  embedding_selector.py  openai_encoder.py  query_classifier.py  selector.py  traversal.py
static/: flow_comparison.html  index.html  traversal_by_querytype.html
tests/unit/: test_evaluation.py  test_indexing.py  test_models.py  test_pipeline.py  test_retrieval.py
